--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "gatsby-starter-julia",
+  "name": "project-smartphone",
   "private": true,
-  "description": "A minimal blog template built with Gatsby",
+  "description": "zelf professionele video's maken. Jij kan dat",
   "version": "0.1.0",
-  "author": "Niklas Metje <hi@niklasmtj.de>",
+  "author": "Jade Yorks <jadeyorks@ngmail.com>",
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.11",
     "gatsby": "^2.18.8",
-    "gatsby-image": "^2.1.2",
+    "gatsby-image": "^2.2.44",
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-netlify": "^2.1.2",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.1.3",
+    "gatsby-plugin-sharp": "^2.4.13",
+    "gatsby-remark-images": "^3.1.50",
     "gatsby-remark-prismjs": "^3.3.21",
     "gatsby-remark-reading-time": "^1.0.1",
     "gatsby-source-filesystem": "^2.0.38",
     "gatsby-transformer-remark": "^2.3.12",
-    "gatsby-transformer-sharp": "^2.1.21",
+    "gatsby-transformer-sharp": "^2.3.19",
     "prism-themes": "^1.1.0",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
